added boxes and boss as well as ability to fire

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <script type="text/javascript" src="src/event_listener.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
     <script type="text/javascript" src="src/player.js"></script>
+    <script type="text/javascript" src="src/game.js"></script>
+    <script type="text/javascript" src="src/box.js"></script>
+    <script type="text/javascript" src="src/bullet.js"></script>
+    <script type="text/javascript" src="src/boss.js"></script>
     <title></title>
   </head>
   <body>
     <div id="game">
+      <div id="box-container">
+
+      </div>
       <div id="player" style="bottom: 0px; left: 350px;"></div>
 
     </div>
