seeded items, finished creating boss with auto side movement and fire

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="src/box.js"></script>
     <script type="text/javascript" src="src/bullet.js"></script>
     <script type="text/javascript" src="src/boss.js"></script>
+    <script type="text/javascript" src="src/boss_bullet.js"></script>
+    <script type="text/javascript" src="src/item.js"></script>
     <title></title>
   </head>
   <body>
