--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="src/boss_bullet.js"></script>
     <script type="text/javascript" src="src/item.js"></script>
     <script type="text/javascript" src="src/score.js"></script>
+    <script type="text/javascript" src="src/level.js"></script>
     <title></title>
   </head>
   <body>
